--- a/index.html
+++ b/index.html
@@ -15,110 +15,54 @@
     </script>
 </head>
 <body>
-   <!-- first section -->
-   <nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">TWCOM</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about/">about</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Services
-            </a>
-            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <li><a class="dropdown-item" href="/komlap/">Komputer/Laptop</a></li>
-              <li><a class="dropdown-item" href="/mikrotik/">Mikrotik</a></li>
-              <li><a class="dropdown-item" href="/dgvideo/">Desain Grafis/Video/a></li>
-            </ul>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/protofolio/">Portofolio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/sosmed/">Kontak</a>
-          </li>
+<!-- first section -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark text-light sticky-top">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">TWCOM</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="/">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/about/">about</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            Services
+          </a>
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="/komlap/">Komputer/Laptop</a></li>
+            <li><a class="dropdown-item" href="/mikrotik/">Mikrotik</a></li>
+            <li><a class="dropdown-item" href="/dgvideo/">Desain Grafis/Video/a></li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/protofolio/">Portofolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/sosmed/">Kontak</a>
+        </li>
 
-        </ul>
-        <!-- <form class="d-flex">
-          <inputs class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-light" type="submit">Search</button>
-        </form> -->
-      </div>
+      </ul>
+      <!-- <form class="d-flex">
+        <inputs class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search</button>
+      </form> -->
     </div>
-  </nav>    
+  </div>
+</nav>    
 <!-- end section -->
 
-          <div class="row text-center align-items-center mt-4">
-            <!-- first card -->
-            <h1 class="mt-2">* Portofolio TWCOM *</h1>
-            <div class="card-group ">
-              <div class="card">
-                <img src="../assets/cor2.jpg" class="card-img-top" alt="...">
-                <div class="card-body text-center">
-                  <a class="card-title" href="/mikrotik/">Portofolio </a>
-                </div>
-              </div>
-              <div class="card">
-                <img src="../assets/cor3.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <a class="card-title" href="/mikrotik/">Portofolio 1 </a>
-                </div>
-              </div>
-              <div class="card">
-                <img src="../assets/cor4.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <a class="card-title" href="/mikrotik/">Portofolio 2 </a>
-                </div>
-              </div>
-              <div class="card">
-                <img src="../assets/cor6.jpg" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <a class="card-title" href="/mikrotik/">Portofolio 3 </a>
-                </div>
-              </div>
-            </div>          
+      <div class="row text-center align-items-center mt-4">
+          <div class="col -12"> 
+            <img src="../assets/cor3.jpg" widht="150" height="150"alt="my image"/>
+            <h1 class="mt-2">* Mikrotik Service *</h1>
+            <i>** Mikrotik **</i>
           </div>
-        </div>
-
-          <!-- kedua card -->
-          <div class="card-group text-center align-items-center">
-            <div class="card">
-              <img src="../assets/cor2.jpg" class="card-img-top" alt="...">
-              <div class="card-body text-center">
-                <a class="card-title" href="/mikrotik/">Portofolio </a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/cor3.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <a class="card-title" href="/mikrotik/">Portofolio 1 </a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/cor4.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <a class="card-title" href="/mikrotik/">Portofolio 2 </a>
-              </div>
-            </div>
-            <div class="card">
-              <img src="../assets/cor6.jpg" class="card-img-top" alt="...">
-              <div class="card-body">
-                <a class="card-title" href="/mikrotik/">Portofolio 3 </a>
-              </div>
-            </div>
-          </div>          
-        </div>
-      </div>
-        
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
