--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
       <div class="row text-center align-items-center mt-4">
           <div class="col -12"> 
-            <img src="../assets/cor3.jpg" widht="150" height="150"alt="my image"/>
-            <h1 class="mt-2">* Mikrotik Service *</h1>
-            <i>** Mikrotik **</i>
+            <img src="../assets/cor1.jpg" widht="150" height="150"alt="my image"/>
+            <h1 class="mt-2">* Komputer dan Laptop *</h1>
+            <i>** Komputer dan Laptop **</i>
           </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
