--- a/index.html
+++ b/index.html
@@ -56,12 +56,11 @@
   </div>
 </nav>    
 <!-- end section -->
-
-      <div class="row text-center align-items-center mt-4">
+  <div class="row text-center align-items-center mt-4">
           <div class="col -12"> 
-            <img src="../assets/cor1.jpg" widht="150" height="150"alt="my image"/>
-            <h1 class="mt-2">* Komputer dan Laptop *</h1>
-            <i>** Komputer dan Laptop **</i>
+            <img src="../assets/cor4.png" widht="150" height="150"alt="my image"/>
+            <h1 class="mt-2">* Desain Grafis dan Video *</h1>
+            <i>** Editing Desain Grafis dan Video **</i>
           </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
